<resources>
    <string name="app_name">FF</string>

    <!-- welcome Screen Strings  -->
    <string name="welcome_screen_logo">Faculty Find</string>

    <!-- Main Screen Strings -->
    <string name="main_screen_bufs">BUFS</string>
    <string name="main_screen_bufs1">BUFS</string>
    <string name="main_screen_find_fac"> 내게 맞는 학과 찾기 </string>
    <string name="main_screen_next_step"> 다음 단계 </string>
    <string name="questions_no">1.</string>
    <string name="questions">다양한 문화와 언어에 관심이 많아서 해외 여행이나 교환학생 프로그램에 참여하고 싶은 편이다.</string>
    <string name="progress">1</string>
    <string name="option1">정말 그렇다</string>
    <string name="option2">보통이다</string>
    <string name="option3">그렇지 않다</string>
    <string name="button_next">다음 단계</string>
    <string name="button_back">이전 단계</string>
    <string name="button_return">처음으로</string>


    <!-- Last Screen Strings -->
    <string name="last_text_1">부산외국어대학교는 여러분과 함께 희망찬 미래를 꿈꾸고 만들어 갈 것입니다.</string>
    <string name="last_text_2">전공 역량 검사에서 나타난 역량은 ?</string>
    <string name="last_text_3">으로 두드러지는 것으로 확인됩니다. 보다 상세한 내용으로 나만의 학과를 확인해보세요 !</string>
    <string name="button_last">상세 보기</string>
    <string name="result">언어, 의사소통 역량</string>

    <!-- details Screen Strings -->
    <string name="result_detail_title">안전,위기극복 능력</string>
    <string name="result_detail_text_1">안전 및 위기 극복 역량이 뛰어난 당신!</string>
    <string name="result_detail_text_2">만인의 히러로를 꿈꾸는 당신, 다른 사람들이 두려워하는 각종 재난, 재해에 대한 관심이 많으며, 이를 예방하는 대처하는 기술을 습득할 수 있는 역량이 뛰어나네요! </string>
    <string name="result_detail_job">소방기술사, 소방시설관리사,재난안전연구원, 손해보험사, 위험물기능사, 보건·재난관리사, 안전기술사, 산업안전기사</string>
    <string name="result_datail_faculty">소방방재학과, 소방행정학과, 산업안전공학과, 드론로봇융합학과, 경찰학과</string>


    <!--  Fail Screen Strings  -->
    <string name="return_text_1">전공 역량 검사가 제대로 측정되지 않았습니다. </string>
    <string name="return_text_2">다시 한번 질문지를 꼼꼼히 살펴보신 후 신중히 재검사를 진행해주시길 바랍니다.</string>
    <string name="return_text_button">재검사 하기</string>



        <!--More Detailed information -->
        <string name="details_for_IT">당신은 논리적이고 체계적인 성격으로, 무엇이든 치밀하게 계획하고 진행하는 것을 즐깁니다.
            또는 일을 효율적으로 진행하는 편이여서 뭐든지 일의 우선순위를 따져 최소시간안에 최고 효율을 내는 것을 좋아하는 편입니다.
            확실한 해답을 찾는 과정에서 논리적으로 생각하고 주장하려는 경향이 강해 주변인들과 토론하는 것을 즐기는 성향으로 파악됩니다.
            이런 특성을 바탕으로 “IT대학”이 당신에게 적합할 것으로 보입니다.</string>

        <string name="details_for_digitalMedia">당신은 타고난 예술가로서 남다른 시각과 창의성을 가지고 있습니다. 모든 것을 자신만의 방식으로 꾸미고 표현하는 것을 즐기며, 새로운 아이디어가 끊임없이 떠오릅니다. 일상 속에서도 항상 새로움을 추구하며,
            관습적인 경로보다는 독특한 곳을 찾아 나서는 편입니다. 이처럼 창의성을 중요시하는 당신에게는 “디지털미디어대학”의 다양한 영상 및 미디어 분야가 적합할 것입니다..</string>

        <string name="details_for_sang">당신은 경제와 비즈니스에 대한 흥미가 높으며 주식 시장과 금융 상품에 대한 정보를 찾아보는 것을 즐깁니다. 계획을 세우고 그에 따라 행동하는 것을 선호하며, 목표를 달성하기 위해 노력하는 습관이 있습니다.
            현재의 경제 상황을 이해하고 미래의 경제 동향을 예측하는 것에 관심이 많습니다. 따라서 이러한 당신에게 “상경대학”을 추천하고 싶습니다. 이곳에서 다양한 기업들의 경영 전략이나 비즈니스 모델에 대해 공부하고 분석 할 수 있으며 경제 문제에
            대해 다양한 관점에서 바라보고 그에 대한 해결책을 고민해볼 수 있는 기회를 갖게 될 것입니다.</string>

        <string name="details_for_society">당신은 사회과학 분야인 경제학, 사회학, 정치학 등에 큰 흥미를 가지고 있는 것으로 보입니다. 새로운 아이디어나 사회 문제에 대해 항상 관심을 가지며 논의하고 탐구하는 것을 즐기며, 지식을 넓히고 싶어합니다.
            특수하게 사회과학대학은 세가지 분야로 나뉠 수 있는데, 사회적 변화와 인간 관계에 대한 이해를 통해 세계를 더 나은 곳으로 만들고자 하고 사회적 영향력을 행세하여 긍정적인 변화를 이끌어보자 한다면 사회복지학과, 상담심리학과, 한국어교육전공을 추천합니다.
            신체적인 능력이 우수하고 이를 활용하여 사회현상까지 관련해서 더 깊게 알아가고자 하는 생각을 갖고 있다면 정량적인 데이터를 통해 사회 문제를 이해하고 해결하는 능력을 바탕으로 경찰행정학과, 사이버경찰학과, 사회체육학과, 스포츠재활학과를 주로 추천합니다.
            다양한 문화와 역사에 대해 배우고 이해하는 것을 즐기며, 사회 다양성에 관심이 많고 다양한 문화와 관점을 이해하며 상호간의 이해와 협력을 중요시 하는 당신에게는 외교전공, 글로벌미래융합학부, 국제개발협력전공, 시민영어교육학과를 추천합니다.</string>

        <string name="details_for_asia">당신은 아세안 지역에 대해 관심을 가지며 다양한 문화와 언어에 개방적입니다. 다양한 배경을 가진 학생들과 협력과 소통으로 팀워크에 능숙한 모습을 보입니다.
            또한 다양한 문화 간의 교류를 할 정도로 이해와 존중에 능숙한 편으로 다양한 국제적 환경에서 활동 할 수 있는 인재가 될 수 있습니다. 이를 보아 당신은 “아시아대학”에 적합한 학생으로 생각됩니다.</string>

        <string name="details_for_europe">당신은 다양한 문화와 언어에 대해 관심이 많으며, 새로운 무언가를 추구하는 성격입니다.
            다양한 문화와 언어에 대한 이해와 관심을 바탕으로 다양한 배경을 지닌 당신은 문제 해결과 혁신을 위한 유연한 사고력을 갖고 있습니다.
            이런 당신에게 유럽미주대학은 다양한 문화와 경험을 제공하며 창의적인 활동을 즐길 수 있는 ‘유럽미주대학’을 추천합니다.</string>



    <!--More Detailed information about Major -->
    <string name="details_for_europe_Major">영어학부(영어전공, 영어통번역전공),독일어과,스페인어과,유럽학부(프랑스어전공, 포르투갈(브라질)어전공, 이탈리아어전공, 유럽지역통상전공),러시아학과</string>
    <string name="details_for_asia_Major">일본어융합학부(한일문화콘텐츠전공, 비즈니스일본어전공, 일본어IT전공),
        중국학부(중국어전공,중국지역통상전공),아세안학부(태국어전공, 인도네시아·말레이시아전공, 베트남어전공, 미얀마어전공, 인도어전공),중동학부(아랍전공, 터키어전공),국제문화비지니스학부(인도지역통상전공, G2(미·중)문화비즈니스전공)</string>
    <string name="details_for_society_Major">사회복지학과, 상담심리학과, 한국어교육전공, 경찰행정학과, 사이버경찰학과, 사회체육학과, 스포츠재활학과, 외교전공, 글로벌미래융합학부, 국제개발협력전공, 시민영어교육학과</string>
    <string name="details_for_sang_Major">경영학과, 회계학과, 국제마케팅학과, 국제무역학과, 경제금융학과, 국제비서사무전공, 국제문화관광전공, 호텔컨벤션전공,항공서비스전공</string>
    <string name="details_for_IT_Major">컴퓨터공학부(컴퓨터공학전공,빅데이터전공), 소프트웨어학부(소프트웨어전공, 사물인터넷(IoT)전공, 전자로봇·보안학부(전자로봇전공, 스마트융합보안전공)</string>
    <string name="details_for_digitalMedia_Major">영상콘텐츠융합학과, 글로벌웹콘텐츠학과</string>










</resources>