<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bufs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="115dp"
            android:gravity="center_horizontal|top"
            android:text="@string/main_screen_bufs"
            android:textAppearance="@style/main_screen_bufs" />

        <TextView
            android:id="@+id/text_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="115dp"
            android:layout_marginTop="100dp"
            android:gravity="center_horizontal|top"
            android:text="@string/main_screen_find_fac"
            android:textAppearance="@style/main_screen_find_fac" />

</RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/bufs1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="31dp"
            android:text="@string/main_screen_bufs1"
            android:textAppearance="@style/main_screen_bufs_1"
            android:gravity="center_horizontal|top"
            />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/rectangle_2"
            android:layout_width="350dp"
            android:layout_height="368dp"
            android:layout_marginLeft="24dp"
            android:background="#FFCA08"
            />

        <TextView
            android:id="@+id/questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/questions"
            android:textAppearance="@style/main_screen_questions"
            android:gravity="center_horizontal"
            />
    </RelativeLayout>


    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/main_screen_next_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="50dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/main_screen_next_button"
        >

        <TextView
            android:id="@+id/next_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/main_screen_next_step"
            android:textAppearance="@style/main_screen_next_step"
            style="@style/main_screen_next_step"
            android:layout_centerInParent="true"
            />
    </RelativeLayout>


</LinearLayout>