<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <!-- BUFS logo -->
        <RelativeLayout
            android:id="@+id/text_shadow"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            >

            <TextView
                android:id="@+id/bufs"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_centerHorizontal="true"
                android:includeFontPadding="false"
                android:fontFamily="@font/pretendard_bold"
                android:text="BUFS"
                android:textColor="#000000"
                android:textSize="77sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_main"
                android:layout_width="320dp"
                android:layout_height="38dp"
                android:layout_below="@id/bufs"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:gravity="center"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/last_text_1"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="125dp"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/pretendard_bold"
                android:includeFontPadding="false"
                android:text="BUFS"
                android:textAppearance="@style/bufs_shadow">

            </TextView>

        </RelativeLayout>

        <!-- Bottom Navigation Section -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="315dp"
            android:layout_marginLeft="45dp"
            android:layout_marginRight="45dp"
            android:background="@drawable/radius"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/questions"
                    android:layout_width="235dp"
                    android:layout_height="21dp"
                    android:layout_marginTop="12dp"
                    android:textAlignment="center"
                    android:gravity="center"
                    android:fontFamily="@font/pretendard_semibold"
                    android:lineHeight="25sp"
                    android:text="@string/last_text_2"
                    android:textAppearance="@style/last_text" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginTop="15dp"
                >

                <TextView
                    android:id="@+id/result"
                    android:layout_width="200dp"
                    android:layout_height="29dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="1dp"
                    android:text="@string/result"
                    android:textAppearance="@style/result">

                </TextView>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="200dp"
                android:layout_height="8dp"
                android:layout_marginTop="8dp"
                android:background="@drawable/line"
                >


            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="235dp"
                    android:layout_height="63dp"
                    android:text="@string/last_text_3"
                    android:textAlignment="center"
                    android:textAppearance="@style/last_text"
                    android:fontFamily="@font/pretendard_semibold"
                    >

                </TextView>
            </LinearLayout>
        </LinearLayout>

        <FrameLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            >

            <RelativeLayout
                android:id="@+id/next_button"
                android:layout_marginTop="20dp"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:background="@drawable/main_screen_button_non"
                android:clickable="true"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/button_last"
                    android:textAppearance="@style/button_back"
                    android:fontFamily="@font/pretendard_bold"
                    android:layout_centerInParent="true"
                    />
                <View
                    android:layout_width="23dp"
                    android:layout_height="16dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/arrow_right" />
            </RelativeLayout>




        </FrameLayout>
    </LinearLayout>
</RelativeLayout>