<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/fail_screen"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <!-- BUFS logo -->
        <RelativeLayout
            android:id="@+id/text_shadow"
            android:layout_width="match_parent"
            android:layout_height="130dp"
            >

            <TextView
                android:id="@+id/bufs"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_centerHorizontal="true"
                android:includeFontPadding="false"
                android:fontFamily="@font/pretendard_bold"
                android:text="BUFS"
                android:textColor="#000000"
                android:textSize="77sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/bufs"
                android:textAlignment="center"
                android:gravity="center"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/last_text_1"
                android:textColor="#000000"
                android:textSize="16sp"
                android:lineHeight="18dp"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="125dp"
                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="2dp"
                android:fontFamily="@font/pretendard_bold"
                android:includeFontPadding="false"
                android:text="BUFS"
                android:textAppearance="@style/bufs_shadow">

            </TextView>

        </RelativeLayout>

        <!-- Bottom Navigation Section -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/radius"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="20dp">


            <RelativeLayout
                android:layout_width="250dp"
                android:layout_height="190dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/fail_icon"
                >



            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="250dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/return_text_1"
                    android:textAlignment="center"
                    android:textAppearance="@style/result"
                    android:fontFamily="@font/pretendard_semibold"
                    >

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="20dp"
                    android:fontFamily="@font/pretendard_semibold"
                    android:text="@string/return_text_2"
                    android:textAlignment="center"
                    android:textAppearance="@style/detail_text_2">

                </TextView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/return_button_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:orientation="vertical"
            >
            <RelativeLayout
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:background="@drawable/main_screen_button"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/return_text_button"
                    android:textAppearance="@style/button_return"
                    android:fontFamily="@font/pretendard_bold"
                    android:layout_centerInParent="true"
                    />

            </RelativeLayout>
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>