<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
<!--     logo       -->
            <RelativeLayout
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="77dp">
            <TextView
                android:id="@+id/bufs"
                android:layout_width="wrap_content"
                android:layout_height="75dp"
                android:layout_centerHorizontal="true"
                android:includeFontPadding="false"
                android:fontFamily="@font/pretendard_bold"
                android:text="BUFS"
                android:textColor="#000000"
                android:textSize="77sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/text_main"
                android:layout_width="320dp"
                android:layout_height="38dp"
                android:layout_below="@id/bufs"
                android:layout_centerHorizontal="true"
                android:textAlignment="center"
                android:gravity="center"
                android:fontFamily="@font/pretendard_bold"
                android:text="@string/last_text_1"
                android:textColor="#000000"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="125dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/pretendard_bold"
                android:includeFontPadding="false"
                android:text="BUFS"
                android:textAppearance="@style/bufs_shadow">

            </TextView>
            </RelativeLayout>
<!--노란색 창-->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:background="@drawable/radius"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal">

                    <RelativeLayout
                        android:id="@+id/button"
                        android:layout_width="102dp"
                        android:layout_height="24dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="20dp"
                        android:text="@string/detail_text"
                        android:background="@drawable/detail_text"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:gravity="center"
                            android:text="@string/detail_text"
                            android:textAppearance="@style/detail_text"
                            android:fontFamily="@font/pretendard_semibold"
                            >
                        </TextView>
                    </RelativeLayout>


                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginTop="15dp"
                    >

                    <TextView
                        android:id="@+id/result_1"
                        android:layout_width="200dp"
                        android:layout_height="29dp"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="1dp"
                        android:gravity="center"
                        android:text="@string/result"
                        android:textAppearance="@style/result"
                        android:fontFamily="@font/pretendard_bold"
                        >

                    </TextView>



                    <View
                        android:id="@+id/line_1"
                        android:layout_width="200dp"
                        android:layout_height="1dp"
                        android:layout_above="@id/result_1"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:background="@drawable/line"
                        >

                    </View>


                    <View
                        android:id="@+id/second_num"
                        android:layout_width="22dp"
                        android:layout_height="20dp"
                        android:layout_toLeftOf="@id/result_2"
                        android:layout_marginTop="85dp"
                        android:background="@drawable/two_icon"
                        >
                    </View>

                    <View
                        android:layout_width="200dp"
                        android:layout_height="1dp"
                        android:layout_below="@id/result_2"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:background="@drawable/line"
                        >

                    </View>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="235dp"
                        android:layout_height="63dp"
                        android:text="@string/last_text_3"
                        android:textAlignment="center"
                        android:textAppearance="@style/last_text"
                        android:fontFamily="@font/pretendard_semibold"
                        >

                    </TextView>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="안녕하세요 김땡땡 입니다 \n안녕하세요 김땡땡 입니다 \n안녕하세요 김땡땡 입니다 \n안녕하세요 김땡땡 입니다 \n안녕하세요 김땡땡 입니다 \n안녕하세요 김땡땡 입니다 \n안녕하세요 김땡땡 입니다 \n안녕하세요 김땡땡 입니다 \n"
                android:textSize="50sp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>